# Binance-Bot

./: .env.example  .gitignore  LOGGING.md  README.md  TROUBLESHOOTING.md  app.py  assistant.py  binance_client.py  cli.py  logger.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
tests/: conftest.py  test_binance_client.py  test_cli.py
tools/: binance_tools.py  streamlit_tools.py
